<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_item_productname"
        android:layout_weight="1"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvProductPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_item_productprice"
        android:layout_weight="1" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvProductStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_item_productrating"
        android:layout_weight="1" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvProductLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_item_productlikes"
        android:layout_weight="1"/>
</LinearLayout>