<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScrollViewAndNestedScrollExerciseActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUserProfileHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_profile_heading"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="25sp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPersonalDetailsHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tvUserProfileHeading"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/personal_detail_heading"
                android:textAlignment="center"
                android:background="@drawable/detail_section_heading_bg"
                android:textSize="22sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nsvPersonalDetails"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintTop_toBottomOf="@+id/tvPersonalDetailsHeading"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/profile_details_content_bg">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvNameHeading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/user_profile_fullname_heading"
                        app:layout_constraintTop_toTopOf="parent"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/user_profile_fullname_value"
                        app:layout_constraintTop_toBottomOf="@+id/tvNameHeading" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvAddressHeading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/tvName"
                        android:text="@string/user_profile_address_heading"
                        android:textSize="20sp"
                        android:layout_marginTop="15dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/tvAddressHeading"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@string/user_profile_address_value"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvDateOfBirthHeading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/tvAddress"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="15dp"
                        android:textSize="20sp"
                        android:text="@string/user_profile_dob_heading" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvDateOfBirth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/user_profile_dob_value"
                        app:layout_constraintTop_toBottomOf="@+id/tvDateOfBirthHeading"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvBloodGroupHeading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/user_profile_blood_group_heading"
                        android:layout_marginTop="15dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvDateOfBirth"
                        android:textSize="20sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/tvBloodGroupHeading"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@string/user_profile_blood_group_value" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/tvEducationalDetailsHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/nsvPersonalDetails"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/user_profile_educational_details_heading"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/detail_section_heading_bg"
                android:textSize="22sp"/>

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nsvEducationalDetails"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tvEducationalDetailsHeading"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/profile_details_content_bg">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvStdTenHeading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/user_profile_stdten_marks_heading"
                        app:layout_constraintTop_toTopOf="parent"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvStdTenMarks"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/user_profile_stdten_marks_value"
                        app:layout_constraintTop_toBottomOf="@+id/tvStdTenHeading" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvStdTwelveHeading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/tvStdTenMarks"
                        android:text="@string/user_profile_stdtwelve_marks_heading"
                        android:textSize="20sp"
                        android:layout_marginTop="15dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvStdTwelveMarks"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/tvStdTwelveHeading"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@string/user_profile_stdtwelve_marks_value"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvCollegeNameHeading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/tvStdTwelveMarks"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="15dp"
                        android:textSize="20sp"
                        android:text="@string/user_profile_college_name_heading" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvCollegeName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/user_profile_college_name_value"
                        app:layout_constraintTop_toBottomOf="@+id/tvCollegeNameHeading"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvCollegeMarksHeading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/user_profile_college_marks_heading"
                        android:layout_marginTop="15dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvCollegeName"
                        android:textSize="20sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/tvCollegeMarksHeading"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@string/user_profile_college_marks_value" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvWorkExperienceHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/detail_section_heading_bg"
                app:layout_constraintTop_toBottomOf="@+id/nsvEducationalDetails"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/user_profile_professionaldetails_heading"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:textSize="22sp"/>

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nsvProfessionalDetails"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tvWorkExperienceHeading"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/profile_details_content_bg">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvCompanyOneHeading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/company_one_name_heading"
                        app:layout_constraintTop_toTopOf="parent"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvCompanyOne"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/company_one_value"
                        app:layout_constraintTop_toBottomOf="@+id/tvCompanyOneHeading" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvCompanyTwoHeading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/tvCompanyOne"
                        android:text="@string/company_two_name_heading"
                        android:textSize="20sp"
                        android:layout_marginTop="15dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvCompanyTwo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/tvCompanyTwoHeading"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@string/company_two_value"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvCompanyThreeHeading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/tvCompanyTwo"
                        android:text="@string/company_three_name_heading"
                        android:textSize="20sp"
                        android:layout_marginTop="15dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvCompanyThree"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/tvCompanyThreeHeading"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@string/company_three_value"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>